--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.0",
     "dotenv": "^16.0.3",
+    "google-auth-library": "^9.4.1",
+    "googleapis": "^129.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2"
   },
