--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "push:today": "node push-jira.js \"$(date +'%Y-%m-%d')\""
   },
   "author": "",
+  "sideEffects": [
+    "setup.js",
+    "push-jira.js",
+    "index.js",
+    "invoice.js"
+  ],
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
@@ -30,7 +36,6 @@
   "devDependencies": {
     "copy-webpack-plugin": "^12.0.2",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-cli": "^6.0.1"
   }
 }
